PniReport list updated